web-infras/parser/tests/fixtures/babel/es2022/private-in/invalid-private-followed-by-in-4/output.txt
[SyntaxError]: Private names are only allowed in property accesses (`obj.#private`) or in `in` expressions (`#private in obj`). (4,11)
4|    await #x in this
 |         ^
